2008-03-31  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #346555

	* google-source.c: (plugin_google): 
	Fixed a mnemonic conflict. 

2008-01-25  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (liborg_gnome_evolution_google_la_LIBADD): Fix typo:
	s/EVOLUTION_CALENDAR_LIB1S/EVOLUTION_CALENDAR_LIBS/.

2007-12-23  Nyall Dawson <nyall@zombiepigs.net>

	** Fix for bug #503954

	* google-source.c: (is_email), (user_changed): Accept custom domain 
	names while setting up account.

2007-10-30  Sankar P  <psankar@novell.com>

	* ChangeLog:
	Every plugin should have a ChangeLog. Added.

	* google-source.c: 
	Commented an unused function. 
	Marked Debug statements conditional.