@@ -1,5 +1,6 @@
 INCLUDES = 						\
 	$(EVOLUTION_CALENDAR_CFLAGS)			\
+	$(EVOLUTION_ADDRESSBOOK_CFLAGS) \
 	-I .						\
 	-I$(top_srcdir)	                                \
 	-DCALDAV_GLADEDIR=\""$(gladedir)"\"		
@@ -10,7 +11,9 @@ plugin_DATA = org-gnome-evolution-google.eplug
 plugin_LTLIBRARIES = liborg-gnome-evolution-google.la
 
 liborg_gnome_evolution_google_la_SOURCES =        \
-	google-source.c
+	google-source.c \
+	google-contacts-source.h \
+	google-contacts-source.c
 
 liborg_gnome_evolution_google_la_LIBADD = 	\
 	$(EVOLUTION_CALENDAR_LIBS)		\
