@@ -3,11 +3,17 @@
   <e-plugin id="org.gnome.evolution.google" type="shlib" _name="Google sources"
     location="@PLUGINDIR@/liborg-gnome-evolution-google@SOEXT@" load-on-startup="false" localedir = "@LOCALEDIR@">
     <author name="Ebby Wiselyn" email="ebbywiselyn@gmail.com"/>
-    <_description>A plugin to setup google calendar.</_description>
-    
+    <author name="Joergen Scheibengruber" email="joergen.scheibengruber@googlemail.com"/>
+    <_description>A plugin to setup google calendar and contacts.</_description>
+
     <hook class="org.gnome.evolution.calendar.config:1.0">
       <group target="source" id="org.gnome.evolution.calendar.calendarProperties">
-	<item type="item_table" path="00.general/00.source/15.google" factory="plugin_google"/>
+        <item type="item_table" path="00.general/00.source/15.google" factory="plugin_google"/>
+      </group>
+    </hook>
+    <hook class="org.gnome.evolution.addressbook.config:1.0">
+      <group target="source" id="com.novell.evolution.addressbook.config.accountEditor">
+        <item type="item" path="00.general/10.display/00.google" factory="plugin_google_contacts"/>
       </group>
     </hook>
   </e-plugin>
